redistribuzione cartelle e sistemato il sistema di build (appena si builda su react flask fa il serve della build sulle route messe su react router

--- a/install
+++ b/install
@@ -26,9 +26,9 @@ open_terminal() {
 
 echo "Installo le dipendenze"
 cd Email-Server; pipenv install; cd ..; 
-cd Auth-Server; pipenv install; cd static/login; npm install; cd ..; cd ..; cd ..; 
-               cd OTP-Server; pipenv install; cd static/otp; npm install; cd ..; cd ..; cd ..;
-               cd Resource-Server; pipenv install; cd static/app; npm install;
+cd Auth-Server; pipenv install; cd login; npm install; cd ..; cd ..; 
+               cd OTP-Server; pipenv install; cd otp; npm install; cd ..; cd ..;
+               cd Resource-Server; pipenv install; cd app; npm install;
 
   
 
