aggiornato file di install

--- a/install
+++ b/install
@@ -26,6 +26,7 @@ open_terminal() {
 
 echo "Installo le dipendenze"
 cd Email-Server; pipenv install; cd ..; 
+cd Backup-Database-Bot; pipenv install; cd ..;
 cd Auth-Server; pipenv install; cd login; npm install; cd ..; cd ..; 
                cd OTP-Server; pipenv install; cd otp; npm install; cd ..; cd ..;
                cd Resource-Server; pipenv install; cd app; npm install;
